# aperio

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  conda-explicit-win64.txt  design.md  environment.yml  package-lock.json  package.json  pyproject.toml  ~$大作业.docx  大作业.docx
.github/workflows/: package.yml
.superpowers/sdd/: progress.md  task-2-report.md  task-3-report.md
aperio_agent_backend/: .env.example  .gitignore  README.md  __init__.py  cli.py  config.py  deepagents_engine.py  event_protocol.py  extensions.py  feishu_gateway.py  hitl.py  local_knowledge.py  mcp_tools.py  mcp_web_search_server.py  memory.py  middleware.py  observability.py  policy.py  resources.py  runner.py  safe_execution.py  sandbox.py  scanner.py  skill_backend.py
aperio_agent_backend/skill-assets/code-health/code-architect/: SKILL.md
aperio_agent_backend/skill-assets/code-health/code-dependency/: SKILL.md
aperio_agent_backend/skill-assets/code-health/code-documentation/: SKILL.md
aperio_agent_backend/skill-assets/code-health/code-health-toolkit/: SKILL.md
aperio_agent_web/: README.md  app.py
aperio_agent_web/frontend/: index.html  vite.config.mjs
aperio_agent_web/frontend/src/: App.jsx  styles.css
aperio_agent_web/static/: __init__.py  app.js  index.html  observability.css  observability.html  observability.js  styles.css
aperio_agent_web/static/react/: index.html
demo/: 01_basic_agent.py  02_code_health_subagents.py  03_prd_review_subagents.py  04_generate_skills.py  05_context_engineering.py  06_sandbox_hitl.py  07_middleware_langsmith.py  08_longterm_memory.py  2的运行输出.md  3的运行输出.md  5的运行输出.md  8的运行输出.md  aperio_integrated.py  mcp_web_search_server.py  test_amap_mcp_tools.py
demo/04_skills/: test_skills.py
demo/04_skills/general/tool-usage/: SKILL.md
demo/04_skills/web-search/: SKILL.md
demo/local_resources/: aperio_policy.yaml
demo/sandbox/: Dockerfile
docs/superpowers/plans/: 2025-06-25-aperio-implementation.md
scripts/: agent-browser-local.mjs  sync-lucide.mjs
(+61 files in other folders)
